--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>cn.com.cennavi</groupId>
+	<groupId>com.kevin.iestudio</groupId>
 	<artifactId>tools-codec</artifactId>
-	<version>1.0.7</version>
+	<version>1.1.0</version>
 	<packaging>jar</packaging>
 
 	<name>tools-codec</name>
@@ -17,12 +17,12 @@
 		<repository>
 			<id>nexus-releases</id>
 			<name>Nexus Release Repository</name>
-			<url>http://192.168.10.217:8994/nexus/content/repositories/releases/</url>
+			<url>http://199.193.255.161:8994/nexus/content/repositories/releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>nexus-snapshots</id>
 			<name>Nexus Snapshot Repository</name>
-			<url>http://192.168.10.217:8994/nexus/content/repositories/snapshots/</url>
+			<url>http://199.193.255.161:8994/nexus/content/repositories/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
  <build>
